--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Coming Soon
+<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jme-nelsn/jme-nelsn.github.io/master/manifest.plist">
+Tap Here to Install<br />Your App 1.0 <br />Directly On Your Device
+</a>
