--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h3>To install the interactive open this page on your iOS device and tap the link below</h3>
 						<ul class="icons">
-							<a href="itms-services://?action=download-manifest&url=https://drive.google.com/uc?export=download&id=1CVavhEaJpXLf68ewEi9f-Wjo1FNDGcJp&authuser=j%40mienelson.com&usp=drive_fs">
+							<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jme-nelsn/jme-nelsn.github.io/master/manifest.plist">
 							Tap Here to install GFX viewer
 							</a>
 						</ul>
