--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<h3>To install the interactive open this page on your iOS device and tap the link below</h3>
 						<ul class="icons">
 							<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jme-nelsn/jme-nelsn.github.io/master/manifest.plist">
-							Tap Here to install GFX viewer
+							Tap Here to install
 							</a>
 						</ul>
 					</header>
