--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h3>To install the interactive open this page on your iOS device and tap the link below</h3>
+						<h3>Jamie Nelson</h3>
 						<ul class="icons">
-							<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jme-nelsn/jme-nelsn.github.io/master/manifest.plist">
+<!-- 							<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/jme-nelsn/jme-nelsn.github.io/master/manifest.plist">
 							Tap Here to install
-							</a>
+							</a> -->
 						</ul>
 					</header>
 	</body>
